# rss-reader

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml
backend/migrations/: env.py
backend/migrations/versions/: 0001_baseline.py  0002_feed_conditional_get.py
backend/rss_reader/: __init__.py  api.py  cli.py  config.py  db.py  fetcher.py  models.py  opml.py  scheduler.py  service.py
backend/tests/: conftest.py  sample_feed.xml  sample_home.html  test_autodiscovery.py  test_conditional.py  test_fetcher.py  test_logging.py  test_migrations.py  test_opml.py  test_prune.py  test_scheduler.py  test_search.py  test_service.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.svelte  app.css  test-setup.ts
frontend/src/components/: AddFeed.svelte  DaySection.svelte  FeedSidebar.svelte  ImportOpml.svelte  ItemRow.svelte  RefreshButton.svelte
frontend/src/lib/: api.ts  datetime.relative.test.ts  datetime.test.ts  datetime.ts  groupByDay.test.ts  groupByDay.ts  store.nav.test.ts  store.ts  types.ts
